Se agregó la página de gallería y temporadas.

--- a/src/pages/gallery/index.astro
+++ b/src/pages/gallery/index.astro
@@ -33,8 +33,9 @@ import photos from "../../data/gallery.json";
   >
     <div class="relative p-5">
       <img id="modalImage" class="max-w-full max-h-screen rounded-lg" />
-      <button id="closeModal" class="absolute top-2 right-2 text-white text-3xl"
-        >&times;</button
+      <button
+        id="closeModal"
+        class="absolute top-2 right-2 text-red-500 text-5xl">&times;</button
       >
     </div>
   </div>
