--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,9 +20,11 @@ import Navbar from "../components/Navbar.astro";
     <link rel="stylesheet" href="/src/styles/global.css" />
     <title>MR. ROBOT | FSociety</title>
   </head>
-  <body class="bg-black text-white">
+  <body class="bg-black text-white flex flex-col min-h-screen">
     <Navbar />
-    <slot />
+    <div class="flex-1">
+      <slot />
+    </div>
     <Footer />
   </body>
 </html>
