--- a/src/components/Characters.astro
+++ b/src/components/Characters.astro
@@ -6,17 +6,26 @@ import characters from "../data/characters.json";
 const { main, recurring } = characters;
 ---
 
-<div class="bg-gradient-to-b from-[#C60323] via-[#4D000D] to-[#7a0114]">
-  <h2 class="text-2xl font-bold text-white text-center">
+<div
+  class="bg-gradient-to-b from-[#C60323] via-[#4D000D] to-[#7a0114] text-center py-5"
+>
+  <h2
+    class="text-2xl font-bold text-white border-b border-b-white inline-block"
+  >
     Personajes Principales
   </h2>
-  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 p-4">
+
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-6 gap-4 p-4">
     {main.map(({ id, ...character }) => <CharacterCard {...character} />)}
   </div>
-  <h2 class="text-2xl font-bold text-white text-center">
+
+  <h2
+    class="text-2xl font-bold text-white border-b border-b-white inline-block my-2"
+  >
     Personajes Secundarios
   </h2>
-  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 p-4">
+
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-6 gap-4 p-4">
     {recurring.map(({ id, ...character }) => <CharacterCard {...character} />)}
   </div>
 </div>
