Modificación en rutas de archivos estáticos

--- a/src/components/CharacterCard.astro
+++ b/src/components/CharacterCard.astro
@@ -48,7 +48,7 @@ const { name, role, image, social } = Astro.props;
                         class="text-blue-500"
                       >
                         <img
-                          src={`/src/assets/social-icons/${key}.svg`}
+                          src={`/social-icons/${key}.svg`}
                           alt={value}
                           class="w-7 h-7"
                         />
